@@ -1,3 +1,10 @@
+2022-07-19T16:17:09Z:
+* notice: last 14d: unq all: 2 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 217 399 / 229 423
+* notice: next accum: outdated-unq outdated-all / unq all: 217 399 / 229 422
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-07-05]
+
 2022-07-19T08:15:07Z:
 * notice: last 14d: unq all: 2 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 217 399 / 229 424
